--- a/ujian/htmls/studentlogin.html
+++ b/ujian/htmls/studentlogin.html
@@ -33,37 +33,15 @@
     <form id="loginForm" class="space-y-6">
 
       <!-- NIS input with floating label -->
+      <!-- Name preview for the entered exam ID -->
+      <div id="nisName" class="text-sm text-gray-600 mt-1 mb-2 min-h-[1.2em]"></div>
+
       <div class="relative z-0 w-full">
-        <input type="text" name="nis" required placeholder=" "
+        <input type="text" name="ID" required placeholder=" "
           class="peer block w-full border-b-2 border-gray-300 bg-transparent px-0 py-2 text-gray-900 focus:border-blue-500 focus:outline-none focus:ring-0 transition-all duration-300" />
         <label
           class="absolute left-0 -top-3.5 text-gray-500 text-sm transition-all peer-placeholder-shown:top-2.5 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-base peer-focus:-top-3.5 peer-focus:text-gray-700 peer-focus:text-sm">
-          NIS
-        </label>
-      </div>
-
-      <!-- Room select with floating label effect -->
-      <div class="relative z-0 w-full">
-        <select name="room" required
-          class="peer block w-full border-b-2 border-gray-300 bg-transparent px-0 py-2 text-gray-900 focus:border-blue-500 focus:outline-none focus:ring-0 transition-all duration-300">
-          <option value="" disabled selected hidden>Pilih ruangan</option>
-          {% for room in rooms %}
-          <option value="{{ room.id }}">{{ room.name }}</option>
-          {% endfor %}
-        </select>
-        <label
-          class="absolute left-0 -top-3.5 text-gray-500 text-sm transition-all peer-placeholder-shown:top-2.5 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-base peer-focus:-top-3.5 peer-focus:text-gray-700 peer-focus:text-sm">
-          Ruangan
-        </label>
-      </div>
-
-      <!-- Token input with floating label -->
-      <div class="relative z-0 w-full">
-        <input type="text" name="token" required placeholder=" "
-          class="peer block w-full border-b-2 border-gray-300 bg-transparent px-0 py-2 text-gray-900 focus:border-blue-500 focus:outline-none focus:ring-0 transition-all duration-300" />
-        <label
-          class="absolute left-0 -top-3.5 text-gray-500 text-sm transition-all peer-placeholder-shown:top-2.5 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-base peer-focus:-top-3.5 peer-focus:text-gray-700 peer-focus:text-sm">
-          Token akses
+          ID Ujian
         </label>
       </div>
 
@@ -84,6 +62,63 @@
   </footer>
 
   <script>
+    // --- Check exam ID (NIS) when user finishes typing or presses Enter ---
+    (function () {
+      const idInput = document.querySelector('input[name="ID"]');
+      const nisNameEl = document.getElementById('nisName');
+      let debounceTimer = null;
+
+      if (!idInput) return;
+
+      const setIDName = (name) => {
+        if (!nisNameEl) return;
+        nisNameEl.textContent = name ? `Halo, ${name}` : '';
+      };
+
+      const checkID = async (examId) => {
+        if (!examId) {
+          setIDName('');
+          return;
+        }
+
+        // show a small loading hint
+        setIDName('Mengecek...');
+
+        try {
+          const resp = await fetch('./whoami', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ exam_id: examId }),
+          });
+
+          // try to parse JSON even on non-200 so we can show message if provided
+          const data = await resp.json().catch(() => ({}));
+
+          if (data && data.name) {
+            setIDName(data.name);
+            // store preview name locally so submit handler can use it later if needed
+            try { localStorage.setItem('student-name-preview', data.name); } catch (e) { /* ignore */ }
+          } else {
+            // clear if no name returned
+            setIDName('');
+          }
+        } catch (err) {
+          // network or server error
+          setIDName('Gagal mengecek ID (server offline)');
+        }
+      };
+
+      // debounce helper: call checkID 400ms after typing stops
+      idInput.addEventListener('input', (e) => {
+        clearTimeout(debounceTimer);
+        const v = e.target.value && e.target.value.trim();
+        debounceTimer = setTimeout(() => checkID(v), 700);
+      });
+
+      // also check on blur (user finished) and on Enter key
+      idInput.addEventListener('blur', (e) => checkID(e.target.value && e.target.value.trim()));
+    })();
+
     const form = document.getElementById('loginForm');
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
@@ -107,10 +142,8 @@
       setMessage('', '');
 
       try {
-        const room = form.querySelector('select[name="room"]')?.value || '';
-        const token = form.querySelector('input[name="token"]')?.value.toUpperCase() || '';
         const nis = form.querySelector('input[name="nis"]')?.value || '';
-        const payload = { nis, token, room };
+        const payload = { nis };
 
         const resp = await fetch('./', {
           method: 'POST',
